--- a/predict.ipynb
+++ b/predict.ipynb
@@ -2278,6 +2278,13 @@
         "suhu_luar_besok_norm = (suhu_luar_besok - np.mean(dataSuhuOut)) / np.std(dataSuhuOut)\n",
         "suhu_ac_besok_norm = (suhu_ac_besok - np.mean(dataSuhu_ac)) / np.std(dataSuhu_ac)\n",
         "\n",
+        "print(np.mean(dataSuhuOut))\n",
+        "print(np.mean(dataSuhuInd))\n",
+        "print(np.mean(dataSuhu_ac))\n",
+        "print(np.std(dataSuhuOut))\n",
+        "print(np.std(dataSuhuInd))\n",
+        "print(np.std(dataSuhu_ac))\n",
+        "\n",
         "# Membuat input data untuk prediksi\n",
         "input_data = np.array([[suhu_luar_besok_norm, suhu_ac_besok_norm]])\n",
         "\n",
@@ -2294,15 +2301,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W6O_sLG-0qpd",
-        "outputId": "e99b2ce8-9cfd-4548-c031-d6425eb6e7e9"
+        "outputId": "e4be7e32-2d2c-45bc-de3e-45aed0ef566d"
       },
-      "execution_count": 13,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 94ms/step\n",
+            "25.2320987654321\n",
+            "22.713827160493828\n",
+            "20.776954732510287\n",
+            "2.3037897116518424\n",
+            "1.5215510019739682\n",
+            "1.3482360774673696\n",
+            "1/1 [==============================] - 0s 32ms/step\n",
             "Prediksi suhu dalam ruangan besok: 21.363173\n"
           ]
         }
